- implement status providing endpoint - finalize SystemStatusDTO - add createdTimestamp and updatedDateTime for Build.java and Product.java - small refactoring - added tests